<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.damithamarasinghe.oeidecisiontool.Activites.CriteriaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/tv_appName"
            android:textSize="40sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/item_criteria"
            android:textSize="30dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorAccent"
            />


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent">



                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:text="@string/btn_review_criteria"
                    android:id="@+id/btn_project"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"/>



            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent">



                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:text="@string/btn_create_criteria"
                    android:id="@+id/btn_create_criteria"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"/>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent">



                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:text="@string/btn_edit_criteria"
                    android:id="@+id/btn_edit_criteria"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"/>


            </TableRow>


        </TableLayout>



    </LinearLayout>



</RelativeLayout>
