<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.damithamarasinghe.oeidecisiontool.Activites.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/tv_appName"
                android:textSize="40sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/tv_welcome"
                android:textSize="30dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorAccent"

                />
            <EditText
                android:id="@+id/et_uname"
                android:layout_width="250dip"
                android:fontFamily="sans-serif"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_Head"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_useremail"
                android:layout_marginTop="30dip"
                android:hint="Email"
                android:textColorHint="@color/gray"
                android:imeOptions="actionNext"
                android:paddingLeft="7dip"
                android:drawablePadding="10dip"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:background="@drawable/edit_text_background"/>


            <EditText
                android:id="@+id/et_password"
                android:layout_width="250dip"
                android:fontFamily="sans-serif"
                android:drawableLeft="@drawable/ic_password"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                android:layout_below="@+id/et_uname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dip"
                android:drawablePadding="10dip"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/Gray"
                android:textSize="20sp"
                android:background="@drawable/edit_text_background"/>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dip"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/action_sign_in_short"
                android:fontFamily="sans-serif"
                android:background="@color/colorPrimary"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New User ? "
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/tv_createnew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_creatAccount"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorPrimary"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_forgotpassword"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorPrimary"/>



            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
