<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.damithamarasinghe.oeidecisiontool.Activites.Fragments.VoteingsFragment"
    android:id="@+id/content">
                <LinearLayout
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="top"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_logo"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:textAlignment="center"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_appName"
                            android:textSize="40sp"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/black"
                            />
                </LinearLayout>


                <ProgressBar
                    android:id="@+id/pbvotes"
                    android:layout_below="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:max="10"
                    android:progress="5"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:maxHeight="30sp"
                    android:minHeight="30sp"
                    />

                <TextView
                    android:id="@+id/tv_question_vote"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pbvotes"
                    android:layout_marginTop="10sp"
                    android:text="@string/question"
                    android:textSize="30sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_vote_submit"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_above="@+id/note"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@id/note"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="5sp"
                    android:text="@string/tv_vote_note"
                    android:textSize="10sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_below="@+id/tv_question_vote"
                    android:layout_above="@+id/btn_vote_submit"
                    android:id="@+id/lvvalues"
                    android:dividerHeight="0dp"
                    android:divider="@null"
                    />




</RelativeLayout>
